# hdmirx

./: CMakeLists.txt
example/: example.c
inc/: buffer.h  capture.h  common.h  display.h  encoder.h  list_common.h  network.h
src/: capture.c  display.c  encoder.c  encoder_priv.h  encoder_utils.c  gles_util.c  list_common.c  network.c
src/libardmpegts/: CMakeLists.txt  LICENSE
src/libardmpegts/inc/: mpeg-ts.h
src/libardmpegts/src/: mpeg-element-descriptor.c  mpeg-pat.c  mpeg-pes.c  mpeg-pmt.c  mpeg-ps-dec.c  mpeg-sdt.c  mpeg-ts-dec.c  mpeg-ts-h264.c  mpeg-ts-h265.c
src/websock/: websock.c  websock.h  websock_priv.h
src/websock/ws/inc/: base64.h  utf8.h  ws.h
src/websock/ws/src/: base64.c  handshake.c  sha1.c  utf8.c  ws.c
